# sql-problems

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
docs/: blog-post.md  reviews.md
src/: blog-post.md  reviews.md
src/claire-carrols-advanced-sql-challenges/: apportioning-payments.sql  subscription-price-changes.sql
src/hacker-rank/: 15-days-of-learning-sql.sql  draw-the-triangle-1.sql  draw-the-triangle-2.sql  interviews.sql  print-prime-numbers.sql
src/interview-query/: 180-day-job-postings.sql  ad-engagement-analysis-for-qualified-users.sql  annual-retention.sql  best-performing-advertisers.sql  ctr-by-age.sql  cumulative-distribution.sql  cumulative-reset.sql  first-touch-attribution.sql  flight-records.sql  johns-new-best-friend.sql  liker-s-likers.sql  notification-deliveries.sql  notification-type-conversion.sql  page-recommendations.sql  paired-products.sql  payments-received.sql  rolling-bank-transactions.sql  second-longest-flight.sql  sequentially-fill-in-integers.sql  subscription-overlap.sql  subscription-retention.sql  swipe-precision.sql  total-time-in-flight.sql  trial-test-analysis.sql  user-system-response-times.sql
src/leetcode/: _setup.sql  department-top-three-salaries.sql  human-traffic-of-stadium.sql  trips-and-users.sql
src/lost-at-sql/: 01-case-by-jess-peck.sql  02-identify-by-david-westby.sql  03-maintain-by-chris-green.sql  04-pudding-by-robin-lord.sql  05-search-by-dom-woodman.sql
src/namastesql/: amazon-notifications.sql  project-budget.sql  user-session-activity.sql
(+203 files in other folders)
