[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-problems"
version = "0.0.0"
description = "Solutions to SQL problems."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
