# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-problems"
version = "0.0.0"
description = "Solutions to SQL problems."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
